--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@ body {
   font-family: "Do Hyeon", sans-serif;
   font-weight: 400;
   font-style: normal;
+
+  background-color: #efefeb;
 }
 
 /* code {
